--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -7,6 +7,8 @@
 <body>
   <h1>An error occurred</h1>
   <h2><?php echo $this->message ?></h2>
+  <h2>Check your Internet connection </h2>
+  
 
   <?php if (isset($this->exception)): ?>
   
